# github-markdown-notebook

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build_image.sh  github_restapi.rs  main.rs  notebook.rs  start_withenv.sh  test.rs
actix_in_memory_files/: files.rs  files_service.rs  lambda.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/patches/: @material-ui+lab+4.0.0-alpha.58.patch
frontend/src/: App.tsx
frontend/src/common/: index.tsx  state.jsx  styles.jsx
frontend/src/components/Data/: index.tsx
frontend/src/components/Editor/Menu/: index.tsx
frontend/src/components/Notebook/Menu/: index.tsx
frontend/src/pages/Editor/: editor.tsx  index.tsx  layout.css  layout.tsx
frontend/src/pages/Main/: layout.css  layout.jsx
frontend/src/pages/Main/Layout/Drawer/: drawer.jsx
frontend/src/pages/Main/Layout/Header/: tabs.jsx
frontend/src/pages/Main/subpages/: MarkdownReader.jsx  TreeView.jsx  editor.jsx  notebook.jsx  notebook2.jsx
frontend/src/pages/Welcome/: index.js  test.js
