[package]
name = "github-markdown-notebook"
version = "0.1.0"
authors = ["alex"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix = "0.11.0-beta.2"
actix-web = { version = "3.3.2", features=["openssl"] }
actix-files = "0.5.0"
# actix-rt = "2.0.2"
actix-cors = "0.5.4"
openssl = "0.10.34"
serde_json = "1.0.64"
awc = "2.0.3"
percent-encoding = "2.1.0"

[[bin]]
name = "github-markdown-notebook"
path = "main.rs"
